--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,6 +1,8 @@
 :root {
   --grey: rgba(244, 245, 246, 1);
+  --grey-platinum:  rgba(249, 249, 249, 1);
   --grey-light: rgba(246, 246, 246, 1);
+  --grey-blue:rgba(164, 164, 164, 1);
   --grey-dull:  rgba(139, 139, 139, 1);
   --grey-dark: rgba(207, 207, 207, 1);
   --gray-silver: rgba(202, 202, 202, 1);
