--- a/index.css
+++ b/index.css
@@ -4,5 +4,7 @@
 @import './assets/css/default.css';
 @import './assets/css/header.css';
 @import './assets/css/headerMedia.css';
+@import './assets/css/menu.css';
+@import './assets/css/menuMedia.css';
 @import './assets/css/footer.css';
 @import './assets/css/footerMedia.css';
