feat: add section hero

--- a/index.css
+++ b/index.css
@@ -4,6 +4,8 @@
 @import './assets/css/default.css';
 @import './assets/css/header.css';
 @import './assets/css/headerMedia.css';
+@import './assets/css/hero.css';
+
 @import './assets/css/menu.css';
 @import './assets/css/menuMedia.css';
 @import './assets/css/footer.css';
