--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -49,68 +49,68 @@
   line-height: 19.36px;
 }
 
-@media (max-width: 760px) {
-  .hero__content {
-    min-height: 358px;
-    /* нужно увеличить высоту , ломается вёрстка */
-    /* height: 358px; */
-    max-width: 727px;
-    padding-left: 14px;
-    padding-top: 94px;
-  }
-
-  .hero__title {
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 43.57px;
-    letter-spacing: -0.8px;
-    margin-bottom: 7px;
-  }
-
-  .hero__service-list {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19.36px;
-    letter-spacing: -0.8px;
-    margin-bottom: 29px;
-  }
-
-  .hero__button {
-    width: 170px;
-    height: 49px;
-  }
+.wrapper__carousel {
+  position: relative;
+  overflow: hidden;
+  height: 300px;
 }
 
-@media (max-width: 430px) {
-  .hero__container {
-    height: 700px;
-  }
+.carousel__cards {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  width: auto;
+}
 
-  .hero__content {
-    position: relative;
+.carousel__card {
+  position: relative;
+  width: 427px;
+  height: 267px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: var(--grey-light);
+  border-radius: 10px;
+  padding: 9px 0 29px 0;
+  overflow: hidden;
+}
 
-    height: 622px;
-    max-width: 378px;
-    padding-left: 14px;
-    padding-bottom: 28px;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-  }
+.carousel__card:not(:last-child) {
+  margin-right: 19px;
+}
 
-  .hero__title {
-    margin-bottom: 20px;
-  }
+.wrapper__text {
+  width: 135px;
+  height: 36px;
+  display: grid;
+  place-items: center;
+  background-color: var(--white);
+  border-radius: 10px;
+  margin-left: 9px;
+}
 
-  .hero__service-list {
-    margin-bottom: 0;
-  }
+.card__button {
+  width: 33px;
+  height: 33px;
+  margin-left: 29px;
+  background-color: var(--black);
+}
 
-  .hero__button {
-    position: absolute;
-    bottom: -60px;
-    left: 0;
-    width: 100%;
-    background-color: var(--black);
-  }
+.card__button .img-icon {
+  width: 13px;
+  height: 12px;
+}
+
+.card__background {
+  width: 224px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.card__background-sideKitchen {
+  width: 388px;
+  bottom: -1px;
+  right: -49px;
+
 }
