--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 @import './assets/css/header.css';
 @import './assets/css/headerMedia.css';
 @import './assets/css/hero.css';
+@import './assets/css/heroMedia.css';
 
 @import './assets/css/menu.css';
 @import './assets/css/menuMedia.css';
