feat:add section workxample

--- a/index.css
+++ b/index.css
@@ -6,6 +6,8 @@
 @import './assets/css/headerMedia.css';
 @import './assets/css/hero.css';
 @import './assets/css/heroMedia.css';
+@import './assets/css/workExample.css';
+@import './assets/css/workExampleMedia.css';
 
 @import './assets/css/menu.css';
 @import './assets/css/menuMedia.css';
