--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -168,6 +168,7 @@
 }
 
 .header__button-consultation {
+  width:100%;
   max-width: 203px;
   padding: 15px;
   border: 1px solid var(--gray-silver)
