feat: add ready kitchen section

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -13,4 +13,8 @@
   --black-oil: rgba(83, 83, 83, 1);
   --red: rgba(203, 10, 10, 1);
   --white: rgba(255, 255, 255, 1);
+  --creamy:  rgba(240, 236, 231, 1);
+  --creamy-beige:  rgba(245, 229, 213, 1);
+  --grey-sky:  rgba(236, 239, 245, 1);
+
 }
