--- a/index.css
+++ b/index.css
@@ -8,6 +8,8 @@
 @import './assets/css/heroMedia.css';
 @import './assets/css/workExample.css';
 @import './assets/css/workExampleMedia.css';
+@import './assets/css/readyKitchen.css';
+@import './assets/css/readyKitchenMedia.css';
 
 @import './assets/css/menu.css';
 @import './assets/css/menuMedia.css';
