--- a/index.css
+++ b/index.css
@@ -10,6 +10,8 @@
 @import './assets/css/workExampleMedia.css';
 @import './assets/css/readyKitchen.css';
 @import './assets/css/readyKitchenMedia.css';
+@import './assets/css/aboutUs.css';
+@import './assets/css/aboutUsMedia.css';
 
 @import './assets/css/menu.css';
 @import './assets/css/menuMedia.css';
