--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -7,6 +7,7 @@
   --grey-dark: rgba(207, 207, 207, 1);
   --gray-silver: rgba(202, 202, 202, 1);
   --gray-nickel:  rgba(175, 175, 175, 1);
+  --gray-steel:  rgba(191, 191, 191, 1);
   --gray-charcoal:  rgba(96, 96, 96, 1);
   --black-light: rgba(86, 86, 86, 1);
   --black: rgba(35, 35, 35, 1);
