feat:add section blog

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,21 +1,25 @@
 :root {
-  --grey: rgba(244, 245, 246, 1);
+  --white: rgba(255, 255, 255, 1);
   --grey-platinum:  rgba(249, 249, 249, 1);
   --grey-light: rgba(246, 246, 246, 1);
-  --grey-blue:rgba(164, 164, 164, 1);
-  --grey-dull:  rgba(139, 139, 139, 1);
+  --grey: rgba(244, 245, 246, 1);
+  --grey-sky: rgba(236, 239, 245, 1);
+  --grey-mountains: rgba(218, 218, 218, 1);
   --grey-dark: rgba(207, 207, 207, 1);
   --gray-silver: rgba(202, 202, 202, 1);
-  --gray-nickel:  rgba(175, 175, 175, 1);
-  --gray-steel:  rgba(191, 191, 191, 1);
-  --gray-charcoal:  rgba(96, 96, 96, 1);
+  --gray-steel: rgba(191, 191, 191, 1);
+  --gray-nickel: rgba(175, 175, 175, 1);
+  --grey-blue: rgba(164, 164, 164, 1);
+  --grey-medium: rgba(143, 143, 143, 1);
+  --grey-dull: rgba(139, 139, 139, 1);
+  --grey-stone: rgba(137, 137, 137, 1);
+  --gray-charcoal: rgba(96, 96, 96, 1);
+  --black-oil: rgba(83, 83, 83, 1);
   --black-light: rgba(86, 86, 86, 1);
   --black: rgba(35, 35, 35, 1);
-  --black-oil: rgba(83, 83, 83, 1);
   --red: rgba(203, 10, 10, 1);
-  --white: rgba(255, 255, 255, 1);
+  --red-dark:  rgba(169, 24, 24, 1);
   --creamy:  rgba(240, 236, 231, 1);
   --creamy-beige:  rgba(245, 229, 213, 1);
-  --grey-sky:  rgba(236, 239, 245, 1);
 
 }
