--- a/index.css
+++ b/index.css
@@ -12,6 +12,8 @@
 @import './assets/css/readyKitchenMedia.css';
 @import './assets/css/aboutUs.css';
 @import './assets/css/aboutUsMedia.css';
+@import './assets/css/blog.css';
+@import './assets/css/blogMedia.css';
 @import './assets/css/menu.css';
 @import './assets/css/menuMedia.css';
 @import './assets/css/footer.css';
