--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -65,8 +64,24 @@ p {
   max-width: 1360px;
   padding: 0 20px;
 }
+
+.button-red {
+  background-color: var(--red);
+  color: var(--white);
+}
+
+.button-red:hover {
+  background-color: var(--red-dark);
+}
+
+.button-red:disabled {
+  background-color: var(--grey-mountains);
+  color: var(--grey-medium);
+
+}
+
 @media (max-width: 767px) {
-  .container{
-    max-width: 740px;
+  .container {
+    max-width: 767px;
   }
 }
