--- a/index.css
+++ b/index.css
@@ -18,3 +18,5 @@
 @import './assets/css/menuMedia.css';
 @import './assets/css/footer.css';
 @import './assets/css/footerMedia.css';
+@import './assets/css/card.css';
+@import './assets/css/cardMedia.css';
