--- a/assets/css/workExample.css
+++ b/assets/css/workExample.css
@@ -27,7 +27,7 @@
   display: flex;
   flex-direction: column;
   max-width: 650px;
-  height: 472px;
+  min-height: 472px;
   padding: 11px 11px 23px 11px;
   background-color: var(--grey-light);
   border-radius: 20px;
@@ -48,6 +48,8 @@
 
 .workExamples__card-img {
   margin-bottom: 22px;
+  width: auto;
+  height: 293px;
 }
 
 .workExamples__card-description {
