--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@
 @import './assets/css/fonts.css';
 @import './assets/css/variables.css';
 @import './assets/css/default.css';
+@import './assets/css/menu.css';
+@import './assets/css/menuMedia.css';
 @import './assets/css/header.css';
 @import './assets/css/headerMedia.css';
 @import './assets/css/hero.css';
@@ -14,7 +16,6 @@
 @import './assets/css/aboutUsMedia.css';
 @import './assets/css/blog.css';
 @import './assets/css/blogMedia.css';
-@import './assets/css/menu.css';
-@import './assets/css/menuMedia.css';
+@import './assets/css/salons.css';
 @import './assets/css/footer.css';
 @import './assets/css/footerMedia.css';
