--- a/assets/css/aboutUsMedia.css
+++ b/assets/css/aboutUsMedia.css
@@ -1,20 +1,32 @@
-@media (max-width: 767px) {
+@media (max-width: 1100px) {
+  .aboutUs {
+    margin-bottom: 40px;
+}
   .aboutUs__main {
     position: relative;
     flex-direction: column-reverse;
+    margin-bottom: 33px;
   }
 
   .aboutUs__main-img {
-    width: 100%;
+    max-width: 1100px;
   }
 
   .aboutUs__logo {
     position: absolute;
     right: 8px;
     bottom: 8px;
+    width: 156px;
+    height: 46px;
     max-width: 156px;
+    height: 46px;
+    border-radius: 10px;
+    margin: 0;
   }
 
+  .aboutUs__wrapper-desc{
+    margin: 0;
+  }
   .aboutUs__wrapper-text {
     width: 100%;
     max-width: max-content;
@@ -22,9 +34,6 @@
     margin-bottom: 30px;
   }
 
-  /* .aboutUs__tagline{
-  width: 100%;
-} */
   .aboutUs__slogans-list {
     flex-direction: column;
   }
@@ -32,14 +41,12 @@
   .aboutUs__slogan-item {
     justify-content: start;
     align-items: center;
-    /* max-width: max-content; */
-    /* width: 100%; */
+    height: 121px;
   }
 
   .aboutUs__slogan-item:not(:last-child) {
     border-right: none;
     border-bottom: 1px solid var(--gray-steel);
-    /* margin-bottom: 22px; */
   }
 
   .aboutUs__slogan-num {
