--- a/assets/css/blogMedia.css
+++ b/assets/css/blogMedia.css
@@ -1,23 +1,58 @@
-@media (max-width: 767px) {
-  .blog__card:nth-child(1){
+@media (max-width: 1100px) {
+  .blog__card:nth-child(1) {
     display: none;
   }
-  .blog__cards{
+
+  .blog__cards {
     margin-bottom: 20px;
   }
-  .blog__card{
+
+  .blog__card {
     max-width: 353px;
     padding: 10px 19px 10px 10px;
     height: 434px;
   }
+
+  .blog__card-img {
+    height: 333px;
+    width: 323px;
+    margin-bottom: 14px;
+  }
+
+  .blog__card-date {
+    margin-bottom: 14px;
+  }
+
+  .blog__card-desc {
+    font-size: 16px;
+    line-height: 19.36px;
+  }
 }
+
 @media (max-width: 430px) {
-  .blog__cards{
+  .blog{
+    margin-bottom: 54px;
+  }
+  .blog__cards {
     flex-direction: column;
     row-gap: 14px;
+      margin-bottom: 15px;
   }
-  .blog__card {
-    max-width:max-content;
-    }
 
+  .blog__card {
+    max-width: max-content;
+    max-width: 390px;
+    height: 484px;
+  }
+  .blog__card-img {
+    height: 368px;
+    width: 361px;
+    margin-bottom: 15px;
+  }
+  .blog__card-date {
+    margin-bottom: 15px;
+  }
+  .button__blog {
+width: 100%;
+  }
 }
