--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -49,15 +49,19 @@ img,
 svg {
   max-width: 100%;
   max-height: 100%;
+}
+svg {
+  max-width: 100%;
+  max-height: 100%;
   height: auto;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 p {
   margin: 0;
-}
+} */
 
 .container {
   margin: 0 auto;
@@ -77,7 +81,19 @@ p {
 .button-red:disabled {
   background-color: var(--grey-mountains);
   color: var(--grey-medium);
+}
+.button-black {
+  background-color: var(--black);
+  color: var(--white);
+}
 
+.button-black:hover {
+  background-color: var(--black-coal);
+}
+
+.button-black:disabled {
+  background-color: var(--grey-mountains);
+  color: var(--grey-medium);
 }
 
 @media (max-width: 767px) {
