--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,7 +1,44 @@
+.menu {
+  content: "";
+  position: fixed;
+  top: 2900px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--white);
+  visibility: hidden;
+  transition: 0.5s;
+  overflow-y: scroll;
+}
+.menu__revert{
+  display: none;
+}
+.hide~.section__menu-list {
+  visibility: hidden;
+  transition: 0.5s;
+  z-index: 1;
+  display: none;
+}
+
+.lock {
+  overflow: hidden;
+}
+
+.menu.active {
+  top: 115px;
+  visibility: visible;
+  z-index: 3;
+}
+
 .container__menu {
   padding-top: 45px;
+  padding-bottom: 145px;
+  min-height: 973px;
 }
-.menu__header,.menu__list,.menu__footer-button{
+
+.menu__header,
+.menu__list,
+.menu__footer-button {
   display: none;
 }
 
@@ -47,20 +84,22 @@
   padding-left: 19px;
 }
 
-.triangle-down.active {
-  transform: rotate(0)
+.hide>.triangle-down {
+  transform: rotate(-90deg)
 }
 
 .triangle-down {
-  transform: rotate(-90deg)
+  transform: rotate(0)
 }
+
 
 .menu__footer {
   display: flex;
   justify-content: end;
 }
-.menu__footer .footer__social-link:last-child{
-display: none;
+
+.menu__footer .footer__social-link:last-child {
+  display: none;
 }
 
 .menu__footer .footer__contacts .footer__contacts-email {
@@ -72,3 +111,7 @@ display: none;
 .menu__footer .footer__contacts .footer__contacts-phone-num {
   margin-bottom: 7px;
 }
+
+/* @media (max-width:1100px) {
+
+} */
