--- a/assets/css/readyKitchen.css
+++ b/assets/css/readyKitchen.css
@@ -1,16 +1,25 @@
 .readyKitchen__content {
+  position: relative;
   max-width: 1320px;
   height: 399px;
   padding: 0;
-  background-image:linear-gradient(90deg, rgba(0, 0, 0, 0.69) 5.95%, rgba(0, 0, 0, 0) 92.46%), url(../img/png/readyKitchen.png);
-  background-repeat: no-repeat;
+  /* background-image:linear-gradient(90deg, rgba(0, 0, 0, 0.69) 5.95%, rgba(0, 0, 0, 0) 92.46%), url(../img/png/readyKitchen.png); */
+  /* background-repeat: no-repeat; */
   /* background-size: cover; */
+  background-color: var(--black);
   margin-bottom: 20px;
   color: var(--white);
   padding: 31px 37px;
   border-radius: 20px;
 }
+.readyKitchen__img{
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
 .discount__button{
+  position: relative;
   width: 187px;
   height: 35px;
   background-color: var(--red);
@@ -20,9 +29,12 @@
   line-height: 16.94px;
   border-radius: 37px;
   margin-bottom: 52px;
+  z-index: 2;
 }
 .readyKitchen__wrapper-text{
   margin-bottom: 98px;
+  position: relative;
+z-index: 2;
 }
 .readyKitchen__title{
   font-weight: 600;
@@ -36,6 +48,8 @@
   line-height: 29.05px;
 }
 .readyKitchen__button{
+  position: relative;
+  z-index: 2;
   width: 155px;
   height: 50px;
   background-color: var(--white);
