--- a/assets/css/workExampleMedia.css
+++ b/assets/css/workExampleMedia.css
@@ -1,4 +1,4 @@
-@media (max-width: 760px) {
+@media (max-width: 1100px) {
   workExamples{
     position: relative;
     overflow: hidden;
@@ -14,7 +14,9 @@
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 472px);
   }
-
+  .workExamples__card{
+    max-width: 1100px;
+  }
   .workExamples__card::after {
     content: '';
     width: 33px;
