--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,8 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 *,
 *::after,
 *::before {
@@ -19,11 +14,13 @@ body {
   height: 100%;
 }
 
-img {
-  width: 100%;
-  height: 100%;
-  display: block;
-  flex-shrink: 0;
+img,
+picture,
+video,
+canvas {
+	display: block;
+	max-width: 100%;
+	height: auto;
 }
 
 a {
@@ -42,14 +39,9 @@ input {
 
 ul,
 ol {
+  margin: 0;
+  padding: 0;
   list-style-type: none;
-}
-
-img,
-svg {
-  max-width: 100%;
-  max-height: 100%;
-  height: auto;
 }
 
 h1,
@@ -65,19 +57,48 @@ p {
   padding: 0 20px;
 }
 
-.button-red {
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  padding-block: 14px;
+  padding-inline: 36px;
   background-color: var(--red);
   color: var(--white);
+  transition: background-color 0.2s ease;
 }
 
-.button-red:hover {
+.button:hover {
   background-color: var(--red-dark);
 }
 
-.button-red:disabled {
+.button:disabled {
   background-color: var(--grey-mountains);
   color: var(--grey-medium);
+}
 
+.button--icon {
+  padding: 12px;
+}
+
+.button--black {
+  background-color: var(--black);
+  color: var(--white);
+}
+
+.button--black:hover {
+  background-color: var(--black-light);
+}
+
+.button--outline {
+  color: var(--black);
+  border: 1px solid var(--gray-silver);
+  background-color: transparent;
+}
+
+.button--outline:hover {
+  background-color: var(--grey-sky);
 }
 
 @media (max-width: 767px) {
