--- a/assets/css/headerMedia.css
+++ b/assets/css/headerMedia.css
@@ -55,7 +55,7 @@
     justify-content: start;
   }
 
-  .header__main-search-content>.img-logo {
+  .header__main-search-content>.headr__logo {
     position: absolute;
     top: 50%;
     left: 50%;
