--- a/assets/css/blogMedia.css
+++ b/assets/css/blogMedia.css
@@ -6,9 +6,8 @@
     margin-bottom: 20px;
   }
   .blog__card{
-    max-width: 353px;
+    width: 50%;
     padding: 10px 19px 10px 10px;
-    height: 434px;
   }
 }
 @media (max-width: 430px) {
@@ -17,7 +16,9 @@
     row-gap: 14px;
   }
   .blog__card {
-    max-width:max-content;
-    }
-
+    width: 100%;
+  }
+  .blog__button {
+    align-self: auto;
+  }
 }
