--- a/assets/css/heroMedia.css
+++ b/assets/css/heroMedia.css
@@ -1,29 +1,21 @@
 @media (max-width: 760px) {
   .hero__content {
     min-height: 358px;
-    max-width: 727px;
+    max-width: 728px;
     padding: 94px 14px 60px;
   }
 
   .hero__title {
-    font-weight: 500;
+    margin-bottom: 8px;
     font-size: 36px;
-    line-height: 43.57px;
-    letter-spacing: -0.8px;
-    margin-bottom: 7px;
+    line-height: 44px;
   }
 
   .hero__service-list {
     font-weight: 400;
     font-size: 16px;
-    line-height: 19.36px;
-    letter-spacing: -0.8px;
+    line-height: 18px;
     margin-bottom: 29px;
-  }
-
-  .hero__button {
-    width: 170px;
-    height: 49px;
   }
 }
 
@@ -58,6 +50,10 @@
     left: 0;
     width: 100%;
     background-color: var(--black);
+  }
+
+  .hero__button:hover {
+    background-color: var(--black-light);
   }
 
   .carousel__card {
