--- a/assets/css/workExampleMedia.css
+++ b/assets/css/workExampleMedia.css
@@ -1,21 +1,20 @@
 @media (max-width: 760px) {
-  work-examples{
-    position: relative;
-    overflow: hidden;
+  .work-examples__cards {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, auto);
   }
+
+  .work-examples__card {
+    max-width: 100%;
+  }
+
   .work-examples__title {
-    font-weight: 500;
     font-size: 36px;
-    line-height: 43.57px;
+    line-height: 44px;
     margin-bottom: 30px;
   }
 
-  .work-examples__cards {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 472px);
-  }
-
-  .work-examples__card::after {
+  /* .work-examples__card::after {
     content: '';
     width: 33px;
     height: 33px;
@@ -27,58 +26,67 @@
     right: 11px;
     bottom: 11px;
     border-radius: 10px;
-  }
+  } */
 
   .work-examples__card:nth-child(2n+1) {
     display: none;
   }
 
-  .work-examples__card-buttons {
+  /* .work-examples__card-buttons {
     display: none;
-  }
+  } */
+
   .work-examples__button {
     align-self: center;
   }
 }
 @media (max-width: 430px) {
-.wrapper__carousel-work{
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 596px;
-}
+  .wrapper__carousel-work {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 596px;
+  }
 
   .work-examples__cards {
     display: flex;
     position: absolute;
   }
-  .work-examples__card{
+
+  .work-examples__card {
     width: 288px;
     height: 596px;
   }
-  .work-examples__card-img{
-height: 347px;
+
+  .work-examples__card-img {
+    height: 347px;
   }
-  .work-examples__card-description{
+
+  .work-examples__card-description {
     font-size: 16px;
     line-height: 19.36px;
     margin-bottom:14px ;
   }
-  .work-examples__card-buttons{
+
+  .work-examples__card-buttons {
     display: flex;
     flex-direction: column-reverse;
     width: 100%;
   }
-  .work-examples__calculate,.work-examples__order{
+
+  .work-examples__calculate,.work-examples__order {
     width: 100%;
   }
-  .work-examples__order{
+
+  .work-examples__order {
     margin-bottom: 7px;
   }
-  .work-examples__card::after{
+
+  .work-examples__card::after {
     content: none;
   }
-  .work-examples__button{
+
+  .work-examples__button {
     width: 100%;
   }
 }
