--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -1,25 +1,25 @@
-.card__container {
+.product__container {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.card__main {
+.product__main {
   display: flex;
   gap: 1rem;
 }
 
-.card__title {
+.product__title {
   font-size: 32px;
   font-weight: normal;
   line-height: normal;
 }
 
-.card__photos {
+.product__photos {
   flex: 1 0 50%;
 }
 
-.card__photos .card__title {
+.product__photos .product__title {
   display: none;
 }
 
@@ -69,78 +69,82 @@
   border-radius: 10px;
 }
 
-.card__info {
+.product__info {
   flex: 1 0 50%;
 }
 
-.card__info .card__title {
+.product__info .product__title {
   display: block;
   margin-top: 0;
 }
 
-.card__info h3[class$="-title"] {
+.product__info h3[class$="-title"] {
   margin-bottom: 6px;
   font-weight: 500;
 }
 
-.card__fabric,
-.card__frame,
-.card__fittings,
-.card__size,
-.card__description {
+.product__fabric,
+.product__frame,
+.product__fittings,
+.product__size,
+.product__description {
   margin-top: 28px;
 }
 
-.card__fabric-name,
-.card__frame-name,
-.card__fittings-item,
-.card__price-title,
-.card__size-data {
+.product__fabric-name,
+.product__frame-name,
+.product__fittings-item,
+.product__price-title,
+.product__size-data {
   color: var(--gray-charcoal);
 }
 
-.card__fabric {
+.product__fabric {
   margin-top: 20px;
 }
 
-.card__fabric-list {
+.product__fabric-list {
   display: flex;
   flex-wrap: wrap;
   gap: 10px 40px;
 }
 
-.card__fabric-item {
+.product__fabric-item {
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
-.card__fabric-img {
+.product__fabric-img {
   width: 46px;
 }
 
-.card__fittings-list {
+.product__fittings-list {
   list-style-type: disc;
   padding-left: 1rem;
 }
 
-.card__price {
+.product__price {
   margin-top: 38px;
 }
 
-.card__price-amount {
+.product__price-amount {
   font-size: 32px;
   line-height: normal;
 }
 
-.card__details-list {
+.product__button {
+  margin-top: 0.5rem;
+}
+
+.product__details-list {
   display: grid;
   grid-template-columns: repeat(4, auto);
   gap: 1.4rem;
   margin-top: 58px;
 }
 
-.card__details-list-item div {
+.product__details-list-item div {
   width: 68px;
   height: 68px;
   margin-bottom: 8px;
