--- a/assets/css/productMedia.css
+++ b/assets/css/productMedia.css
@@ -1,17 +1,21 @@
 @media (max-width: 767px) {
-  .card__main {
+  .product__main {
     flex-direction: column;
   }
-  .card__photos .card__title {
+  .product__photos .product__title {
     display: block;
     margin-bottom: 20px;
   }
 
-  .card__info .card__title {
+  .product__info .product__title {
     display: none;
   }
 
-  .card__details-list {
+  .product__button {
+    width: 100%;
+  }
+
+  .product__details-list {
     grid-template-columns: repeat(2, auto);
     grid-template-rows: repeat(2, auto);
     gap: 3rem;
@@ -19,7 +23,7 @@
 }
 
 @media (max-width: 430px) {
-  .card__details-list {
+  .product__details-list {
     grid-template-columns: auto;
     grid-template-rows: repeat(4, auto);
     gap: 3rem;
