--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
 @import './assets/css/menuMedia.css';
 @import './assets/css/footer.css';
 @import './assets/css/footerMedia.css';
-@import './assets/css/card.css';
-@import './assets/css/cardMedia.css';
+@import './assets/css/product.css';
+@import './assets/css/productMedia.css';
 @import './assets/css/carousel.css';
 @import './assets/css/carouselMedia.css';
