--- a/assets/css/aboutMedia.css
+++ b/assets/css/aboutMedia.css
@@ -9,7 +9,15 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1100px) {
+  .about__image {
+    max-width: 1100px;
+  }
+
+  .about__info {
+    margin-right: 0;
+  }
+
   .about__title {
     margin-bottom: 0;
   }
@@ -65,7 +73,7 @@
 @media (max-width: 430px) {
   .about__logo {
     position: static;
-    max-width:210px;
+    max-width: 210px;
   }
 
   .about__slogan-title {
