--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -27,6 +27,7 @@
 
 .footer__recommendation-text {
   grid-column-start: 1;
+  grid-column-end:3;
   font-weight: 500;
   font-size: 24px;
   line-height: 29.05px;
@@ -49,6 +50,7 @@
 .footer__button {
   width: 58px;
   height: 50px;
+  padding-inline: 0;
   margin-left: 8px;
   background-color: var(--red);
   color: white;
