--- a/assets/css/headerMedia.css
+++ b/assets/css/headerMedia.css
@@ -1,4 +1,4 @@
-@media (max-width: 767px) {
+@media (max-width: 1100px) {
 
   .header__menu,
   .header__button-consultation,
@@ -7,17 +7,31 @@
   .button-favorites>.button-text {
     display: none;
   }
-
+  .header__main{
+    min-height: 115px;
+  }
+  .header__main-container{
+    min-height: 115px;
+  }
   .header__button-menu {
     width: 48px;
+    padding-inline: 14px;
     background-color: var(--grey-light);
   }
 
-  .img-button {
+  .header__button-menu>.img-button {
     margin: 0;
+    width: 20px;
+    height: 20px;
   }
-
-  .img-button>path {
+  /* .header__main-search-content>.img-logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+} */
+/* } */
+  .header__button-menu>.img-button>path {
     fill: var(--black)
   }
 
@@ -29,12 +43,25 @@
 
   .wrapper-img-heart {
     margin-right: 0;
+    width: 48px;
+    height: 48px;
   }
-
+  .img-heart {
+    width: 26.67px;
+    height: 26.67px;
+  }
+  .header__favorites{
+    margin-right: 0;
+  }
+  .header__favorites-text{
+    display: none;
+  }
   .header__main-supportive-content {
     width: auto;
   }
-
+  .header__main-supportive-content> .button{
+    display: none;
+  }
   .wrapper_iconSearch {
     height: 48px;
     width: 48px;
@@ -55,7 +82,7 @@
     justify-content: start;
   }
 
-  .header__main-search-content>.headr__logo {
+  .header__logo {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -65,8 +92,99 @@
 
 @media (max-width: 430px) {
   .wrapper_iconSearch,
-  .header__button-menu,
   .header__main-supportive-content {
+    display: none;
+  }
+
+  .header__main-search-content {
+    justify-content: center;
+  }
+
+  .header__main-search-content.active {
+    align-items: flex-start;
+    flex-direction: column;
+    min-height: 120px;
+    padding-top: 20px;
+    margin-bottom: 10px;
+  }
+
+  .header__button-menu {
+    position: absolute;
+    left: 20px;
+    padding-inline: 11px;
+    background-color: transparent;
+  }
+
+  .header__main-search-content>picture {
+    align-self: center;
+  }
+
+  .header__main-search-content-img-logo {
+    width: 100px;
+    height: 32px;
+  }
+
+  .img-button {
+    display: none;
+  }
+
+  .img-button>path {
+    fill: var(--white);
+  }
+
+  .header__menu-burger {
+    display: block;
+    width: 26px;
+    height: 26px;
+  }
+
+  .header__button-menu.active {
+    width: 42px;
+    height: 42px;
+    background-color: var(--black);
+    margin-bottom: 23px;
+    position: static;
+  }
+
+
+  .header__button-menu.active>.header__menu-burger {
+    display: none;
+  }
+
+  .header__button-menu.active>.img-button{
+    display: block;
+    background-color: black;
+  }
+
+  .header__button-menu.active>.img-button>path {
+    /* display: block; */
+    /* background-color: black; */
+    fill: white;
+  }
+  .input-header::placeholder{
+    color: var(--grey-blue);
+  }
+  /* .header__button-menu.active~.input-header {
+    display: block;
+    width: 100%;
+    padding-left: 42px;
+
+  } */
+
+  /* .header__button-menu.active ~ .wrapper_iconSearch {
+    width: 23px;
+    height: 23px;
+    display: block;
+    position: absolute;
+    left: 33px;
+    top: 88px;
+
+  } */
+  .header__logo.active {
+    display: none;
+  }
+
+  .header__main-search-content.active>.picture {
     display: none;
   }
 }
