--- a/assets/css/ready-kitchen.css
+++ b/assets/css/ready-kitchen.css
@@ -4,7 +4,6 @@
   padding: 0;
   background-image:linear-gradient(90deg, rgba(0, 0, 0, 0.69) 5.95%, rgba(0, 0, 0, 0) 92.46%), url(../img/png/ready-kitchen.png);
   background-repeat: no-repeat;
-  /* background-size: cover; */
   margin-bottom: 20px;
   color: var(--white);
   padding: 30px 36px;
@@ -38,4 +37,7 @@
 
 .ready-kitchen__button {
   margin-top: 98px;
+}
+.category.ready-kitchen--category{
+  min-height: 233px;
 }
