--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,16 +1,19 @@
+.about:not(:first-of-type) {
+  padding-top: 59px;
+}
 .about__title {
-  margin-bottom: 36px;
   font-weight: 500;
   font-size: 40px;
   line-height: 48px;
   color: var(--black);
+  margin-bottom: 8px;
 }
 
 .about__main {
   display: flex;
   justify-content: space-between;
   gap: 5rem;
-  margin-bottom: 48px;
+  margin-bottom: 19px;
 }
 
 .about__image {
