--- a/assets/css/ready-kitchen.css
+++ b/assets/css/ready-kitchen.css
@@ -1,3 +1,7 @@
+.ready-kitchen:not(:first-of-type){
+  padding-top: 81px;
+}
+
 .ready-kitchen__content {
   max-width: 1320px;
   height: 400px;
@@ -39,5 +43,5 @@
   margin-top: 98px;
 }
 .category.ready-kitchen--category{
-  min-height: 233px;
+  height: 233px;
 }
