--- a/assets/css/workExample.css
+++ b/assets/css/workExample.css
@@ -1,3 +1,7 @@
+.work-examples:not(:first-of-type) {
+  padding-top: 93px;
+}
+
 .work-examples__container {
   display: flex;
   flex-direction: column;
@@ -7,7 +11,7 @@
   font-size: 40px;
   font-weight: 500;
   line-height: 48px;
-  margin-bottom: 30px;
+  margin-bottom: 18px;
 }
 
 .work-examples__cards {
