--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
 @import './assets/css/fonts.css';
 @import './assets/css/variables.css';
 @import './assets/css/default.css';
+@import './assets/css/defaultMedia.css';
 @import './assets/css/header.css';
 @import './assets/css/headerMedia.css';
 @import './assets/css/hero.css';
