--- a/assets/css/aboutMedia.css
+++ b/assets/css/aboutMedia.css
@@ -1,4 +1,7 @@
 @media (max-width: 1024px) {
+  .about:not(:first-of-type) {
+    padding-top: 20px;
+}
   .about__slogan-item {
     padding-left: 82px;
   }
@@ -16,6 +19,7 @@
 
   .about__info {
     margin-right: 0;
+    margin-bottom: 10px;
   }
 
   .about__title {
@@ -25,7 +29,7 @@
   .about__main {
     position: relative;
     flex-direction: column-reverse;
-    gap: 2rem;
+    gap: 0;
   }
 
   .about__image {
@@ -56,6 +60,9 @@
     border-bottom: 1px solid var(--gray-steel);
   }
 
+  .about__slogans-list>.about__slogan-item::before {
+    left: 0;
+}
   .about__slogan-item {
     padding-left: 134px;
   }
@@ -71,6 +78,12 @@
 }
 
 @media (max-width: 430px) {
+  .about:not(:first-of-type) {
+    padding-top: 52px;
+}
+.about__main{
+  margin-bottom: 0;
+}
   .about__logo {
     position: static;
     max-width: 210px;
