--- a/assets/css/blogMedia.css
+++ b/assets/css/blogMedia.css
@@ -1,4 +1,7 @@
-@media (max-width: 767px) {
+@media (max-width: 1100px) {
+  .blog:not(:first-of-type) {
+    padding-top: 30px;
+}
   .blog__card:nth-child(1){
     display: none;
   }
@@ -11,10 +14,18 @@
   }
 }
 @media (max-width: 430px) {
+  .blog:not(:first-of-type) {
+    padding-top: 3px;
+}
+.blog__title {
+  margin-bottom: 40px;
+}
   .blog__cards{
     flex-direction: column;
-    row-gap: 14px;
+    row-gap: 28px;
+    margin-bottom: 60px;
   }
+
   .blog__card {
     width: 100%;
   }
