--- a/assets/css/defaultMedia.css
+++ b/assets/css/defaultMedia.css
@@ -3,8 +3,13 @@
     max-width: 1100px;
     padding: 0 20px;
   }
-
+/* 
   .button {
     width: 100%;
+  } */
+}
+@media (max-width: 430px) {
+  .button {
+    /* width: 100%; */
   }
 }
