--- a/assets/css/heroMedia.css
+++ b/assets/css/heroMedia.css
@@ -17,12 +17,10 @@
     line-height: 18px;
     margin-bottom: 29px;
   }
+
 }
 
 @media (max-width: 430px) {
-  .hero__container {
-    height: 980px;
-  }
 
   .hero__content {
     position: relative;
@@ -51,8 +49,12 @@
     width: 100%;
   }
 
-  .carousel__card {
+  .hero__container>.carousel {
+    height: 217px;
+  }
+  .category.hero--category {
     width: 361px;
+    height: 217px;
   }
 
   .carousel__card:not(:last-child) {
