--- a/assets/css/ready-kitchenMedia.css
+++ b/assets/css/ready-kitchenMedia.css
@@ -1,4 +1,8 @@
-@media (max-width: 767px) {
+@media (max-width: 1100px) {
+  .ready-kitchen:not(:first-of-type) {
+    padding-top: 93px;
+  }
+
   .ready-kitchen__content {
     padding: 12px;
   }
@@ -21,37 +25,59 @@
 }
 
 @media (max-width: 430px) {
-  .ready-kitchen__content {
-    padding: 14px 0 0 15px;
-    height: 671px;
-    background-size: cover;
+  .ready-kitchen:not(:first-of-type) {
+    padding-top: 62px;
   }
 
-  .ready-kitchen__title {
-    margin-top: 240px;
+  .ready-kitchen__container>.carousel {
+    overflow: auto;
+    height: auto;
   }
 
-  .ready-kitchen__button {
-    margin-top: 34px;
-  }
+  .ready-kitchen__container>.carousel>.carousel__categories {
+      position: static;
+      flex-direction: column;
+    }
 
-  .ready-kitchen__container .wrapper__carousel {
-    height: 750px;
-  }
+    .category.ready-kitchen--category{
+      width: 100%;
+    }
+    .category.ready-kitchen--category:not(:last-child) {
+      margin: 0;
+      margin-bottom: 22px;
+    }
 
-  .ready-kitchen-cards {
-    flex-direction: column;
-    width: 100%;
+    .ready-kitchen__content {
+      padding: 14px 0 0 15px;
+      height: 671px;
+      background-size: cover;
+    }
 
-  }
+    .ready-kitchen__title {
+      margin-top: 240px;
+    }
 
-  .ready-kitchen-card {
-    height: 233px;
-    margin: 0;
-    width: 100%;
-  }
+    .ready-kitchen__button {
+      margin-top: 34px;
+    }
 
-  .ready-kitchen-card:not(:last-child) {
-    margin: 0 0 20px;
+    .ready-kitchen__container .wrapper__carousel {
+      height: 750px;
+    }
+
+    .ready-kitchen-cards {
+      flex-direction: column;
+      width: 100%;
+
+    }
+
+    .ready-kitchen-card {
+      height: 233px;
+      margin: 0;
+      width: 100%;
+    }
+
+    .ready-kitchen-card:not(:last-child) {
+      margin: 0 0 20px;
+    }
   }
-}
