--- a/assets/css/salons.css
+++ b/assets/css/salons.css
@@ -54,7 +54,7 @@
 .text-field-name,
 .text-field-salons {
   max-width: 364px;
- 
+
 }
 
 .text-field-name {
@@ -83,7 +83,6 @@
   padding: 20px;
   border: 1px solid var(--grey-foggy);
   outline: 1px solid var(--black);
-  /* border: 1px solid var(--grey-foggy); */
   border-radius: 10px;
 }
 
@@ -96,16 +95,19 @@
 }
 
 @media (max-width: 1100px) {
-  .salons:last-of-type{
-padding-bottom: 60px;
-  }
+  .salons:not(:first-of-type) {
+    padding-top: 68px;
+}
+.salons:last-of-type {
+  padding-bottom: 50px;
+}
+
   .salons__entry {
     flex-direction: column;
-    /* margin-bottom: 60px; */
   }
   .salons__map {
     min-height: 386px;
-    margin-bottom: 60px;
+    margin-bottom: 69px;
 }
   .form {
     width: 100%;
@@ -128,6 +130,10 @@ padding-bottom: 60px;
 }
 
 @media (max-width: 430px) {
+  .salons:not(:first-of-type) {
+    padding-top: 56px;
+}
+
   .salons:last-of-type{
     padding-bottom: 43px;
       }
