feat: add favorite component

--- a/index.css
+++ b/index.css
@@ -25,3 +25,4 @@
 @import './assets/css/productMedia.css';
 @import './assets/css/carousel.css';
 @import './assets/css/carouselMedia.css';
+@import './assets/css/favorite.css';
