feat: refactor card component

--- a/index.css
+++ b/index.css
@@ -25,4 +25,6 @@
 @import './assets/css/productMedia.css';
 @import './assets/css/carousel.css';
 @import './assets/css/carouselMedia.css';
+@import './assets/css/card.css';
+@import './assets/css/cardMedia.css';
 @import './assets/css/favorite.css';
