--- a/assets/css/cardMedia.css
+++ b/assets/css/cardMedia.css
@@ -1,11 +1,11 @@
 @media (max-width: 1100px) {
-  /* .card {
-    max-width: 100%;
-  } */
+  .card {
+    max-width: initial;
+  }
 
-  .card__img {
-    height: 291px;
-}
+  .card__image img {
+    width: 100%;
+  }
 
   .card:nth-child(2n+1) {
     display: none;
@@ -26,7 +26,7 @@
     height: 596px;
   }
 
-  .card__img {
+  .card__image img{
     height: 347px;
   }
 
