feat: add similar modals on product page

--- a/index.css
+++ b/index.css
@@ -28,3 +28,5 @@
 @import './assets/css/card.css';
 @import './assets/css/cardMedia.css';
 @import './assets/css/favorite.css';
+@import './assets/css/similar.css';
+@import './assets/css/similarMedia.css';
