--- a/assets/css/cardMedia.css
+++ b/assets/css/cardMedia.css
@@ -7,9 +7,9 @@
     width: 100%;
   }
 
-  .card:nth-child(2n+1) {
+  /* .card:nth-child(2n+1) {
     display: none;
-  }
+  } */
 
   .card__buttons {
     display: none;
@@ -20,7 +20,6 @@
   }
 }
 @media (max-width: 430px) {
-
   .card {
     width: 288px;
     height: 596px;
