--- a/assets/css/heroMedia.css
+++ b/assets/css/heroMedia.css
@@ -1,9 +1,5 @@
 @media (max-width: 1100px) {
-  .hero__content {
-    min-height: 358px;
-    max-width: 728px;
-    padding: 94px 14px 60px;
-  }
+
 
   .hero__title {
     margin-bottom: 8px;
@@ -18,6 +14,14 @@
     margin-bottom: 29px;
   }
 
+}
+
+@media (max-width: 767px) {
+  .hero__content {
+    min-height: 358px;
+    max-width: 728px;
+    padding: 94px 14px 60px;
+  }
 }
 
 @media (max-width: 430px) {
@@ -52,6 +56,7 @@
   .hero__container>.carousel {
     height: 217px;
   }
+
   .category.hero--category {
     width: 361px;
     height: 217px;
