--- a/assets/css/blogMedia.css
+++ b/assets/css/blogMedia.css
@@ -1,7 +1,4 @@
-@media (max-width: 1100px) {
-  .blog:not(:first-of-type) {
-    padding-top: 30px;
-}
+@media (max-width: 767px) {
   .blog__card:nth-child(1){
     display: none;
   }
@@ -9,27 +6,18 @@
     margin-bottom: 20px;
   }
   .blog__card{
-    width: 50%;
+    max-width: 353px;
     padding: 10px 19px 10px 10px;
+    height: 434px;
   }
 }
 @media (max-width: 430px) {
-  .blog:not(:first-of-type) {
-    padding-top: 3px;
-}
-.blog__title {
-  margin-bottom: 40px;
-}
   .blog__cards{
     flex-direction: column;
-    row-gap: 28px;
-    margin-bottom: 60px;
+    row-gap: 14px;
   }
-
   .blog__card {
-    width: 100%;
-  }
-  .blog__button {
-    align-self: auto;
-  }
+    max-width:max-content;
+    }
+
 }
