--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 *,
 *::after,
 *::before {
@@ -14,13 +19,11 @@ body {
   height: 100%;
 }
 
-img,
-picture,
-video,
-canvas {
-	display: block;
-	max-width: 100%;
-	height: auto;
+img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  flex-shrink: 0;
 }
 
 a {
@@ -39,83 +42,46 @@ input {
 
 ul,
 ol {
-  margin: 0;
-  padding: 0;
   list-style-type: none;
+}
+
+img,
+svg {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
 }
 
 h1,
 h2,
 h3,
-h4,
-h5,
 p {
   margin: 0;
 }
 
-section:not(:first-of-type) {
-  padding-top: 96px;
-}
-
-section:last-of-type {
-  padding-bottom: 96px;
-}
-
 .container {
   margin: 0 auto;
-  max-width: 1440px;
-  padding: 0 60px;
+  max-width: 1360px;
+  padding: 0 20px;
 }
 
-.button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10px;
-  padding-block: 14px;
-  padding-inline: 36px;
+.button-red {
   background-color: var(--red);
   color: var(--white);
-  transition: background-color 0.2s ease;
 }
 
-.button:hover {
+.button-red:hover {
   background-color: var(--red-dark);
 }
 
-.button:disabled {
+.button-red:disabled {
   background-color: var(--grey-mountains);
   color: var(--grey-medium);
+
 }
 
-.button--icon {
-  padding: 12px;
-}
-
-.button--black {
-  color: var(--white);
-  background-color: var(--black);
-}
-
-.button--black:hover {
-  background-color: var(--black-light);
-}
-
-.button--white {
-  color: var(--black);
-  background-color: var(--white);
-}
-
-.button--white:hover {
-  background-color: var(--grey-sky);
-}
-
-.button--outline {
-  color: var(--black);
-  border: 1px solid var(--gray-silver);
-  background-color: transparent;
-}
-
-.button--outline:hover {
-  background-color: var(--grey-sky);
+@media (max-width: 767px) {
+  .container {
+    max-width: 767px;
+  }
 }
