--- a/assets/css/footerMedia.css
+++ b/assets/css/footerMedia.css
@@ -1,50 +1,45 @@
-@media (max-width: 1100px) {
+@media (max-width: 767px) {
   .footer {
-    padding-top: 68px;
+    padding-top: 53px;
     height: 744px;
   }
   .footer__main-grid {
     height: 551px;
+    /* display: grid; */
     grid-template-columns: 1fr 200px 1fr;
-    grid-template-rows: 57px 31% 40px 77px 1fr;
+    grid-template-rows: 40px 35% 40px 60px 1fr;
     gap: 10px;
     row-gap: 20px;
   }
 
   .footer__logo {
-    margin-top:  -12px;
     grid-column-start: 1;
-    grid-column-end: 2;
+    grid-column-end: 3;
   }
 
   .footer__social-links {
     grid-column-start: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-          justify-self: end;
-          align-self: start;
-    flex-wrap: wrap;
-    padding: 0;
+    justify-self: end;
+    align-self: center;
   }
 
   .footer__menu-list-basic {
     grid-column-start: 1;
     grid-row-start: 2;
     grid-row-end: 3;
-    justify-self: start;
   }
 
   .footer__menu-list-auxiliary {
     grid-column-start: 2;
     grid-row-start: 2;
     grid-row-end: 3;
-    justify-self: start;
-    padding-left: 0;
   }
 
   .footer__recommendation-text {
     grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 4;
     align-self: end;
@@ -73,16 +68,19 @@
   }
 
   .footer__contacts-text {
+    /* margin: 0; */
     grid-row-start: 2;
     grid-column-start: 1;
   }
 
   .footer__contacts-work {
+    /* margin: 0; */
     grid-row-start: 3;
     grid-column-start: 1;
   }
 
   .footer__contacts-email-text {
+    /* margin: 0; */
     grid-row-start: 2;
     grid-column-start: 2;
   }
@@ -93,27 +91,21 @@
     padding-top: 44px;
     height: 988px;
   }
-  .footer__logo {
-    margin-top: 1px;
-  }
-  .footer__logo-img {
-    width: 146px;
-    height: 47px;
-}
+
   .footer__main-grid {
-    min-height: 849px;
+    height: 800px;
+    /* display: grid; */
     grid-template-columns: 1fr;
-    grid-template-rows: 40px 17% 20% 71px 67px 151px 60px;
+    grid-template-rows: 40px 19% 21% 40px 60px 60px 60px 60px;
     gap: 10px;
-    row-gap: 18px;
-    column-gap: 0;
-    margin-bottom: 17px;
+    row-gap: 20px;
   }
 
   .footer__social-links {
     grid-column-start: 1;
-    grid-row-start: 7;
-    grid-row-end: 8;
+    grid-row-start: -2;
+    grid-row-end: -1;
+    /* grid-row-end: 3; */
     justify-self: start;
     align-self: center;
   }
@@ -124,13 +116,12 @@
 
   .footer__menu-list-basic {
     grid-row-start: 2;
-    align-self: end;
   }
 
   .footer__menu-list-auxiliary {
     grid-row-start: 3;
     grid-column-start: 1;
-    align-self: end;
+    /* grid-row-end: 5; */
   }
 
   .footer__recommendation-text {
@@ -165,11 +156,10 @@
   .footer__footer {
     flex-direction: column;
     position: relative;
-    min-height: 68px;
   }
   .footer__link-privacyPolicy {
     position: absolute;
-    top: -61px;
+    top: -25px;
     left: 0;
   }
 }
